Regerate doc
